--- a/Maude.tex
+++ b/Maude.tex
@@ -8,7 +8,7 @@ In the following we present the Maude \cite{MC03,Maude} and Real Time Maude \cit
 
 \section{Formalising the European Rail Traffic Management System Using Hybrid Automata}
 One formalism which we can use to real about systems such as ERTMS is hybrid automata \cite{TH96}. We shall give a theoretical overview of Hybrid Automata before formalising ERTMS as 3 Hybrid automata composed in paralell.
-
+We begin by defining the syntax of a Hybrid automata before defining its semantics in terms of a labelled transition system.
 \begin{mydef}[Hybrid Automaton: Syntax]
 The syntax of a hybrid automaton $H$ comprises of the following:
 \begin{description}
