--- a/Maude.tex
+++ b/Maude.tex
@@ -139,7 +139,7 @@ The following is a simple example railway we shall use for the purposes of demon
 \draw [arrow] (B) --  node[above = 10pt] {$t_2$} (C);
 \draw [arrow] (C) -- node [left] {$t_3$} (D);
 \end{comment}
-We have modelled the ETMS system controlling the pentagon example (see fig \ref{fig:trackplan}) using several hybrid automata. In this example the value $D(t)$ represents the distance from the start point at time $t$. 
+We have modelled the ERTMS system controlling the pentagon example (see fig \ref{fig:trackplan}) using several hybrid automata. In this example the value $D(t)$ represents the distance from the start point at time $t$. 
 It contains 2 trains $A$ and $B$ and 5 track circuits $l_0, \ldots , l_4$. The track is uni-directional allowing trains to travel from $0 - 249$. 
 
 
